--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,7 +164,11 @@ footer {
 }
 
 .text-secondary {
-    color: rgba(95, 99, 104, 0.87);
+    color: rgba(95, 99, 104, 0.87) !important;
+}
+
+.text-grey{
+    color: #5F6368 !important;
 }
 
 .sspf-text {
@@ -564,6 +568,10 @@ header {
     background-color: #AF52DE;
 }
 
+.btn-invite:hover path {
+    stroke: #FFFFFF;
+}
+
 .members-box {
     overflow-y: hidden;
     display: flex;
@@ -751,7 +759,8 @@ header {
     background-color: #FFFFFF !important;
 }
 
-.more-info-btn {
+.more-info-btn,
+.player-info-btn {
     font-size: 12px;
     cursor: pointer;
     color: #AF52DE;
@@ -801,14 +810,17 @@ header {
 .gtc-matches {
     gap: 20px;
 }
-.gtcl-name{
+
+.gtcl-name {
     font-size: 10px;
     color: #5F6368;
 }
-.gtc-league{
+
+.gtc-league {
     gap: 12px;
 }
-.gtcl-logo{
+
+.gtcl-logo {
     height: 26px;
     width: 26px;
     border-radius: 100px;
@@ -816,49 +828,52 @@ header {
     object-fit: cover;
     object-position: center;
 }
-.gtcl-rating{
+
+.gtcl-rating {
     line-height: 100%;
     font-size: 8px;
     color: #34C759;
 }
-.gtcm-teams{
+
+.gtcm-teams {
     gap: 2px;
 }
 
-.gtcm-teams .gtmt-logo{
+.gtcm-teams .gtmt-logo {
     height: 16px;
     width: 16px;
 }
 
-.gtcm-teams .gtmt-name{
+.gtcm-teams .gtmt-name {
     font-size: 10px;
     color: #5F6368;
 }
 
-.gtcm-time{
+.gtcm-time {
     text-align: center;
     font-size: 8px;
     color: #5F6368;
 }
-.gtcm-border{
+
+.gtcm-border {
     width: 1px;
     background-color: #D2D2D2;
 }
 
-.gtcm-number{
+.gtcm-number {
     font-size: 10px;
     color: #5F6368;
 }
 
-.gtcm-red{
+.gtcm-red {
     color: #FF2D55;
 }
 
-.gtc-row{
+.gtc-row {
     position: relative;
 }
 
-.gtc-row::after{
+.gtc-row::after {
     content: "";
     position: absolute;
     top: -24px;
@@ -870,16 +885,242 @@ header {
     z-index: 0;
 }
 
-.gt-comparison{
+.gt-comparison {
     display: none;
 }
 
-.gt-match.expanded .gt-comparison{
+.gt-match.expanded .gt-comparison {
     display: block;
 }
 
-.gt-match.expanded .mib-chevron{
+.gt-match.expanded .mib-chevron {
     transform: rotate(180deg);
+}
+
+.groups-sec {
+    background-color: rgba(52, 199, 89, 0.06);
+    padding: 30px;
+}
+
+.btn-gc-join {
+    padding: 3px 16px;
+    border-radius: 100px;
+    background-color: #34C759 !important;
+    color: #FFFFFF !important;
+    font-size: 12px;
+    border-color: #34C759 !important;
+}
+
+.group-card {
+    width: 220px;
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    padding: 12px 14px;
+    box-shadow: 0 1px 3px rgba(60, 63, 66, 0.15), 0 1px 4px rgba(60, 63, 66, 0.15);
+}
+
+.gc-tag {
+    display: inline-block;
+    padding: 4px 8px;
+    font-size: 10px;
+    border-radius: 5.3px;
+}
+
+.gct-private {
+    color: #FF2D55;
+    background-color: rgba(255, 45, 85, 0.1);
+}
+
+.gct-open {
+    color: #5856D6;
+    background-color: rgba(88, 86, 214, 0.1);
+}
+
+.gct-public {
+    color: #C26C03;
+    background-color: rgba(194, 108, 3, 0.1);
+}
+
+.gc-logo {
+    height: 30px;
+    width: 30px;
+    border-radius: 100px;
+    object-fit: cover;
+    object-position: center;
+
+}
+
+.groups-slider-cont {
+    width: 850px;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.groups-slider {
+    position: relative;
+}
+
+.groups-slider .slick-prev {
+    left: 0;
+    transform: translate(-50%, -50%);
+}
+
+.groups-slider .slick-next {
+    right: 0;
+    transform: translate(50%, -50%);
+}
+
+.gc-name {
+    font-size: 12px;
+    font-weight: 500;
+    color: #202124;
+}
+
+.group-card .gic-label {
+    font-size: 8px;
+}
+
+.group-card .gic-value {
+    font-size: 12px;
+}
+
+.group-card .gi-stats {
+    gap: 16px !important;
+    margin-top: 12px;
+}
+
+.gsc-title {
+    font-size: 14px;
+}
+
+.gc-cont {
+    padding: 6px;
+}
+
+.player-badge {
+    height: 84px;
+    width: 84px;
+    border-radius: 1000px;
+    border: 3px solid #FFFFFF;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ECECEC;
+}
+
+
+.player-badge.pb-sm {
+    height: 32px;
+    width: 32px;
+    border-width: 2px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.pb-sm .badge-img {
+    width: 16px;
+}
+
+.badge-img {
+    width: 42px;
+}
+
+.g-left-flex {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+
+.psp-card {
+    background-color: #FFFFFF;
+    padding: 15px 12px;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(60, 63, 66, 0.15), 01px 3px rgba(60, 63, 66, 0.15);
+}
+
+.pst-performance {
+    padding: 3px 5px;
+    background-color: rgba(52, 199, 89, 0.1);
+    color: #34C759;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 5px;
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.psp-table td,
+.psp-table th {
+    vertical-align: middle;
+}
+
+.psp-table th {
+    font-size: 8px;
+    color: #5F6368;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.pst-badge {
+    height: 16px;
+}
+
+.psp-table td {
+    font-weight: 700;
+    font-size: 12px;
+    color: #202124;
+}
+
+.pi-card {
+    padding: 12px 8px;
+    background-color: rgba(255, 255, 255, 1);
+    border: 1px solid rgba(237, 237, 237, 1);
+    border-radius: 5px;
+}
+
+.pi-club-logo {
+    height: 29px;
+    width: 29px;
+    border-radius: 0;
+    object-fit: contain;
+    object-position: center;
+}
+
+.pi-club {
+    font-size: 10px;
+}
+
+.pi-cont {
+    padding: 14px;
+    background-color: rgba(248, 248, 248, 1);
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(60, 63, 66, 0.15), 0 1px 3px rgba(60, 63, 66, 0.15);
+}
+
+.pi-contract {
+    font-size: 8px;
+    color: #5F6368;
+}
+.pic-border{
+    border-bottom: 1px solid rgba(233, 233, 233, 1);
+
+}
+.pi-row{
+    margin: 0 -6px;
+}
+
+.pi-row>div{
+    padding: 0 6px;
+}
+.pic-info{
+    white-space: nowrap;
+    font-size: 8px;
+    color: #5F6368;
+}
+.pic-title{
+    font-size: 10px;
 }
 @media (min-width: 992px) {
     .content-container {
@@ -967,6 +1208,14 @@ header {
 
     .adg-container .ssp-left .ssp-content {
         width: 100%;
+    }
+
+    .gtc-row::after {
+        display: none;
+    }
+
+    .gt-col-2 {
+        border-bottom: 1px solid #D2D2D2;
     }
 }
 
