--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ footer {
     color: rgba(95, 99, 104, 0.87) !important;
 }
 
-.text-grey{
+.text-grey {
     color: #5F6368 !important;
 }
 
@@ -575,6 +575,7 @@ header {
 .members-box {
     overflow-y: hidden;
     display: flex;
+    scrollbar-width: thin;
     flex-direction: column;
     max-height: 600px;
     border-radius: 8px;
@@ -698,6 +699,9 @@ header {
 
 .gt-btns {
     margin-bottom: 18px;
+    overflow-x: auto;
+    scrollbar-width: thin;
+    padding-bottom: 8px;
 }
 
 .gt-btn.active,
@@ -1041,7 +1045,7 @@ header {
 }
 
 .pst-performance {
-    padding: 3px 5px;
+    padding: 3px 8px;
     background-color: rgba(52, 199, 89, 0.1);
     color: #34C759;
     font-size: 12px;
@@ -1049,6 +1053,23 @@ header {
     border-radius: 5px;
     width: fit-content;
     margin: 0 auto;
+    line-height: 120%;
+}
+
+.pst-predictions {
+    padding: 3px 8px;
+    background-color: #AF52DE;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: 700;
+    border-radius: 5px;
+    width: fit-content;
+    margin: 0 auto;
+    line-height: 120%;
+}
+
+.psp-table {
+    margin-bottom: 0;
 }
 
 .psp-table td,
@@ -1103,24 +1124,616 @@ header {
     font-size: 8px;
     color: #5F6368;
 }
-.pic-border{
+
+.pic-border {
     border-bottom: 1px solid rgba(233, 233, 233, 1);
 
 }
-.pi-row{
+
+.pi-row {
     margin: 0 -6px;
 }
 
-.pi-row>div{
+.pi-row>div {
     padding: 0 6px;
 }
-.pic-info{
+
+.pic-info {
     white-space: nowrap;
     font-size: 8px;
     color: #5F6368;
 }
-.pic-title{
+
+.pic-title {
     font-size: 10px;
+}
+
+.pi-bar-chart {
+    margin-top: auto;
+    height: 200px !important;
+    width: 100% !important;
+}
+
+tr.player-info {
+    display: none;
+}
+
+.pi-shown .mib-chevron {
+    transform: rotate(180deg);
+}
+
+.pi-shown~tr.player-info {
+    display: table-row;
+}
+
+.psps-num {
+    display: flex;
+    height: 20px;
+    width: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #34C759;
+    color: #FFFFFF;
+    font-size: 10px;
+    font-weight: 700;
+    border-radius: 100px;
+}
+
+.up-name {
+    font-size: 18px;
+}
+
+.up-desc {
+    font-size: 14px;
+}
+
+.upb-text {
+    font-size: 12px;
+}
+
+.up-box {
+    padding: 12px;
+    border-radius: 8px;
+    background-color: rgba(52, 199, 89, 0.1);
+}
+
+.pb-md {
+    height: 60px;
+    width: 60px;
+}
+
+.pb-md .badge-img {
+    width: 27px;
+}
+
+.up-progress-cont {
+    height: 16px;
+    width: 100%;
+    background-color: #EFEFEF;
+    border-radius: 10px;
+    display: flex;
+}
+
+
+.up-progress {
+    height: 100%;
+    border-radius: 10px;
+    background-color: #34C759;
+}
+
+.pb-xs {
+    height: 25px;
+    width: 25px;
+}
+
+.pb-xs .badge-img {
+    width: 11px;
+}
+
+.download-box {
+    background-color: rgba(212, 255, 223, 0.3);
+    border-radius: 4px;
+    padding: 20px;
+}
+
+.db-qr {
+    height: 104px;
+}
+
+.db-title {
+    font-size: 16px;
+}
+
+.db-subtitle {
+    font-size: 14px;
+}
+
+.db-desc {
+    font-size: 12px;
+}
+
+.btn-success {
+    padding: 4px 16px;
+    background-color: #34C759;
+    color: #FFFFFF;
+    border-radius: 100px;
+    border-color: #34C759 !important;
+    font-size: 11px;
+}
+
+.achv-box {
+    padding: 24px;
+    border-radius: 4px;
+    box-shadow: 0 1px 2px rgba(60, 63, 66, 0.15), 0 1px 3px rgba(60, 63, 66, 0.15);
+    background-color: #FFFFFF;
+}
+
+.psc-title {
+    font-size: 14px;
+}
+
+.ab-title {
+    font-size: 14px;
+}
+
+.ab-desc {
+    font-size: 12px;
+}
+
+.upp-sm {
+    height: 8px;
+}
+
+.achievements-row {
+    margin: 0 -10px;
+}
+
+.achievements-row>div {
+    padding: 0 10px 20px;
+}
+
+.text-success {
+    color: #34C759 !important;
+}
+
+.text-danger {
+    color: #FF2D55 !important;
+}
+
+.ps-teams {
+    background-color: rgba(52, 199, 89, 0.1);
+    border-radius: 100px;
+    border: 1px solid rgba(52, 199, 89, 0.1);
+    padding: 4px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    gap: 2px;
+}
+
+.gspst-logo {
+    width: 18px;
+    height: 18px;
+    border-radius: 100px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.ps-teams.active {
+    border-color: #34C759;
+}
+
+.club-stats-table th,
+.club-stats-table td {
+    padding: 4px;
+}
+
+.club-stats-table td {
+    font-size: 10px;
+    font-weight: 400;
+}
+
+.club-stats-table .gtmt-name {
+    font-size: 10px;
+}
+
+.psc-border {
+    width: 100%;
+    border-top: 1px solid #EEEEEE;
+}
+
+.psc-badge {
+    border-radius: 5.33px;
+    padding: 3px 8px;
+    font-size: 12px;
+    color: #fff;
+}
+
+.pscb-green {
+    background-color: #34C759;
+}
+
+.pscb-pink {
+    background-color: #AF52DE;
+}
+
+.fs-10 {
+    font-size: 10px;
+}
+
+.fs-12 {
+    font-size: 12px;
+}
+
+.fs-14 {
+    font-size: 14px;
+}
+
+.fs-16 {
+    font-size: 16px;
+}
+
+.fs-18 {
+    font-size: 18px;
+}
+
+.pscc-outer {
+    height: 6px;
+    border-radius: 100px;
+    background-color: #EEEEEE;
+    width: calc(50% - 4px);
+}
+
+
+.pscc-big {
+    width: 50%;
+}
+
+.pscc-inner {
+    height: 100%;
+    border-radius: 100px;
+}
+
+.pscc-big {
+    height: 10px;
+}
+
+
+.pscc-green {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.pscc-pink {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.pscc-green .pscc-inner {
+    background-color: #34C759;
+}
+
+.pscc-pink .pscc-inner {
+    background-color: #AF52DE;
+}
+
+.pscc-big.pscc-green {
+    border-radius: 100px 0 0 100px;
+}
+
+.pscc-big.pscc-pink {
+    border-radius: 0 100px 100px 0;
+}
+
+.pscc-big.pscc-green .pscc-inner {
+    width: 100%;
+    border-radius: 100px 0 0 100px;
+}
+
+.pscc-big.pscc-pink .pscc-inner {
+    width: 100%;
+    border-radius: 0 100px 100px 0;
+}
+
+.pscc-value,
+.pscc-label {
+    font-size: 11px;
+}
+
+.pscc-label {
+    color: #3C4043;
+}
+
+.pscc-less .pscc-inner {
+    opacity: 0.3;
+}
+
+.gsc-row {
+    margin: 0 -8px;
+}
+
+.gsc-row>div {
+    padding: 0 8px;
+}
+
+.fc-today-button {
+    display: none !important;
+}
+
+.fc-toolbar-title {
+    font-size: 12px !important;
+    font-weight: 500 !important;
+    color: rgba(0, 0, 0, 0.87) !important;
+}
+
+.fc-header-toolbar {
+    margin-bottom: 8px !important;
+    justify-content: space-evenly !important;
+}
+
+.fc-button-primary {
+    padding: 0 !important;
+    height: unset !important;
+    width: unset !important;
+    font-size: 8px !important;
+    color: rgba(0, 0, 0, 0.7) !important;
+    background-color: transparent !important;
+    border: 0 !important;
+}
+
+.fc-day {
+    font-size: 12px !important;
+    font-weight: 400 !important;
+    color: rgba(0, 0, 0, 0.7) !important;
+}
+
+.fc-day a {
+    color: rgba(0, 0, 0, 0.87) !important;
+    text-decoration: none !important;
+}
+
+.fc-daygrid-day-events {
+    position: absolute !important;
+    top: 0 !important;
+    right: 0 !important;
+}
+
+.fc .fc-daygrid-day-number {
+    padding: 2px !important;
+}
+
+.fc-daygrid-day-top {
+    justify-content: center !important;
+}
+
+.fc-theme-standard td,
+.fc-theme-standard th {
+    border: 0 !important;
+}
+
+.fc-day-sun a {
+    color: #FF2D55 !important;
+}
+
+.fc-theme-standard .fc-scrollgrid {
+    border: 0 !important;
+}
+
+.fc-event-title {
+    display: none !important;
+}
+
+.fc-event {
+    position: absolute;
+    top: -3px;
+    right: -3px;
+    height: 9px;
+    width: 9px;
+    border-radius: 100px;
+    background-color: #34C759;
+    border: 1.3px solid rgba(252, 252, 252, 1);
+}
+
+.fc-day-event {
+    background-color: #34C759;
+    border-radius: 6px;
+}
+
+.fc-day-event a {
+    color: #FFFFFF !important;
+}
+
+.btn-shots img {
+    height: 18px;
+    width: 18px;
+    border-radius: 100px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.btn-shots {
+    padding: 3px 12px;
+    border-radius: 100px;
+    border: 0 !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(96, 96, 96, 0.1) !important;
+}
+
+.ground-outline {
+    width: 100%;
+    aspect-ratio: 13/8;
+}
+
+.go-passes {
+    border-radius: 4px;
+    background-color: #000000;
+    color: #FFFFFF;
+    padding: 2px 8px;
+    font-size: 12px;
+    font-weight: 700;
+    width: fit-content;
+    position: absolute;
+    top: 50%;
+}
+
+.gop-left {
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
+
+.gop-right {
+    right: 20%;
+    transform: translate(50%, -50%);
+}
+
+.go-center {
+    height: 40px;
+    width: 40px;
+    border-radius: 100px;
+    background-color: transparent;
+    border: 2px solid #FFFFFF;
+    font-size: 12px;
+    color: #FFFFFF;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.btn-shots.active {
+    background-color: rgba(182, 226, 193, 1) !important;
+}
+
+.circular-progress {
+    position: relative;
+    width: 39px;
+    height: 39px;
+    border-radius: 50%;
+}
+
+.cp-green {
+    background: conic-gradient(#34C759 calc(var(--progress) * 1%),
+            #D9D9D9 0%);
+}
+
+.cp-pink {
+    background: conic-gradient(#AF52DE calc(var(--progress) * 1%),
+            #D9D9D9 0%);
+}
+
+.circular-progress::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 35px;
+    height: 35px;
+    background: #fff;
+    border-radius: 50%;
+}
+
+.circular-progress span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 11px;
+    color: #3C4043;
+}
+
+.cp-label {
+    font-size: 11px;
+    color: #3C4043;
+}
+
+.up-down-chart {
+    height: 102px;
+}
+
+.upc-logo {
+    height: 18px;
+    width: 18px;
+    border-radius: 100px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.psdc-title {
+    font-size: 14px;
+}
+
+.psdc-stats {
+    gap: 20px;
+}
+
+.psdc-stat {
+    justify-content: center;
+    flex-grow: 1;
+    flex-basis: 115px;
+    padding: 7px 10px;
+    border-radius: 3px;
+    gap: 3px;
+    border: 1px solid #DBDBDB;
+    background-color: #F9F9F9;
+}
+
+.doughnutChart {
+    height: 98px !important;
+    width: 98px !important;
+}
+
+
+.custom-legend {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    font-family: Arial, sans-serif;
+}
+
+.legend-item {
+    display: flex;
+    align-items: center;
+}
+
+.legend-box {
+    width: 12px;
+    height: 12px;
+    margin-right: 5px;
+    border-radius: 100px;
+}
+
+.legend-label {
+    font-size: 8px;
+    color: rgba(0, 0, 0, 0.87);
+}
+
+.pc-border{
+    border-bottom: 1px solid #D7D7D7 !important;
+}
+.team-logo{
+    height: 28px;
+}
+.stats-chart{
+    height: 130px !important;
+}
+.logo-sm{
+    height: 20px;
+}
+.line-sm{
+    width: 1px;
+    height: 24px;
+    background-color: #5F6368;
 }
 @media (min-width: 992px) {
     .content-container {
@@ -1237,6 +1850,6 @@ header {
     }
 
     .page-title-bg {
-        height: 200px;
+        height: 130px;
     }
 }
